Update: 2406281423 index.html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <ul class="main-menu">
         <li><a href="#home">home</a></li>
         <li><a href="#about">about</a></li>
+        <li><a href="#services">services</a></li>
         <li><a href="#contact">contact</a></li>
       </ul>                 
     </header>
@@ -53,7 +54,7 @@
           </div>
 
           <div id="about" class="content-region hide">
-            <h2>about</h2>
+            <h2>About</h2>
             <p style="font-size:18px">
               Alfredo Santiago's qualifications include:
             </p>
@@ -76,9 +77,9 @@
             <h2>Contact</h2>
             <p style="font-size:18px">
               Alfredo Santiago<br>
-              Phone: 775-233-6620<br>
-              westano[at]sbcglobal.net<br>
-              Location: Behind the business complex of 1155 West 4th St., Reno, Nevada
+              Phone: 775-750-8812<br>
+              asantiago.handy[at]gmail.com<br>
+              Location: Reno, Nevada
             </p>
           </div>
           
