Update: 2406281428 index.html

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             <p style="font-size:18px">
               Below are the following services we provide:<br>
               <br>
-              Electrical<br>
-              Mechcanical<br>
-              or Plumbing related repairs at various homes or businesses<br>
-              Landscaping repairs (such as drip systems) or services<br>
-              HVAC maintenance and repairs<br>
+              - Electrical<br>
+              - Mechcanical<br>
+              - or Plumbing related repairs and services at various homes or businesses<br>
+              - Landscaping repairs (such as drip systems) and services<br>
+              - HVAC maintenance and repairs<br>
             </p>
           </div>
           
