--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
 
     <header id="header">
-      <img src="logo.jpg">
+      <img src="ASantiago_HandyManLLC_Fig1.PNG">
       <h1>ASantiago Handyman LLC, Reno, Nevada</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
