Update: 2406281449 index.html

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <p style="font-size:18px">
               Alfredo Santiago<br>
               Phone: 775-750-8812<br>
-              asantiago.handy[at]gmail.com<br>
-              Location: Reno, Nevada
+              asantiago.handyman[at]gmail.com<br>
+              Location: Northen Nevada (Reno, Sparks, Cason City)
             </p>
           </div>
           
