--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div id="about" class="content-region hide">
             <h2>About</h2>
             <p style="font-size:18px">
-              Alfredo Santiago's qualifications include:
+              Alfredo Santiago's Education & Experience:
             </p>
           </div>
           
