Update: 2406292302 index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <!-- Page setup -->
     <meta charset="utf-8">
-    <title>ASantiago Handyman LLC - Reno, Nevada</title>
+    <title>A Santiago Handyman LLC - Reno, Nevada</title>
     <meta name="description" content="Providing affordable, professional, maintenance and repairing services such as: electrical, mechanical, plumbing, landscape maintenance, and hvac maintenance and repairs.">
     <meta name="keywords" content="handyman, maintenance, repairs, landscaping, hvac repairs and services, Reno, carson city, Nevada" />
     <link rel="canonical" href="https://asantiago-handyman.github.io/" />
-    <meta name="author" content="Alfredo Santiago Handyman LLC, Reno, Nevada">
+    <meta name="author" content="Alfredo Santiago">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <link rel="icon" type="image/png" href="favicon.png">
   
@@ -31,7 +31,7 @@
 
     <header id="header">
       <img src="ASantiago_HandyManLLC_Fig2.PNG">
-      <h1>ASantiago Handyman LLC, Reno, Nevada</h1>
+      <h1>A Santiago Handyman LLC, Reno, Nevada</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
@@ -49,7 +49,7 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p style="font-size:18px">
-              Welcome to the Homepage of ASantiago Handyman LLC.  We are located in the heart of Reno, Nevada.
+              Welcome to the Homepage of A Santiago Handyman LLC.  We are located in the heart of Reno, Nevada.
             </p>
           </div>
 
@@ -67,7 +67,7 @@
               <br>
               - Electrical<br>
               - Mechcanical<br>
-              - or Plumbing related repairs and services at various homes or businesses<br>
+              - or Plumbing related repairs and services at various businesses or homes<br>
               - Landscaping repairs (such as drip systems) and services<br>
               - HVAC maintenance and repairs<br>
             </p>
