Update: 2406300000 index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               - Electrical<br>
               - Mechcanical<br>
               - or Plumbing related repairs and services at various businesses or homes<br>
-              - Landscaping repairs (such as drip systems) and services<br>
+              - Landscaping services (such as repairs of drip systems)<br>
               - HVAC maintenance and repairs<br>
             </p>
           </div>
