Update: 2407022131 index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
           <div id="about" class="content-region hide">
             <h2>About</h2>
             <p style="font-size:18px">
-              Alfredo Santiago's Education & Experience:
+              Alfredo Santiago's Education:<br>
+              HVAC/R Skills Certificate - Truckee Meadows Community College (TMCC), May 2022
+              Commercial Refrigeration Skills Certificate - TMCC, May 2022
+              <br>
+              Experience:<br>
+              06/2023 - 04/2024 | HVAC/R Technician, THE ARCTICOM GROUP<br>
+              01/2023 - 06/2023 | HVAC/R Technician, SILVER STATE REFRIGERATION & HVAC<br>
+              07/2007 - 12/2022 | Maintenance Technician, BULLY'S SPORTS BAR & GRILL
+              
             </p>
           </div>
           
