Update: 2407040738 index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               Experience:<br>
               06/2023 - 04/2024 | HVAC/R Technician, THE ARCTICOM GROUP<br>
               01/2023 - 06/2023 | HVAC/R Technician, SILVER STATE REFRIGERATION & HVAC<br>
-              07/2007 - 12/2022 | Maintenance Technician, BULLY'S SPORTS BAR & GRILL
+              07/2007 - 12/2022 | Principal Maintenance Technician, BULLY'S SPORTS BAR & GRILL
               
             </p>
           </div>
