Update: 2407050002 index.html

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <h2>About</h2>
             <p style="font-size:18px">
               Alfredo Santiago's Education:<br>
-              HVAC/R Skills Certificate - Truckee Meadows Community College (TMCC), May 2022<br>
-              Commercial Refrigeration Skills Certificate - TMCC, May 2022<br>
+              Certificate in HVAC/R - Truckee Meadows Community College (TMCC), May 2022<br>
+              Certificate in Commercial Refrigeration - TMCC, May 2022<br>
               <br>
               Experience:<br>
               06/2023 - 04/2024 | HVAC/R Technician, THE ARCTICOM GROUP<br>
