Update: 2407050020 index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Providing affordable, professional, maintenance and repairing services such as: electrical, mechanical, plumbing, landscape maintenance, and hvac maintenance and repairs.">
     <meta name="keywords" content="handyman, maintenance, repairs, landscaping, hvac repairs and services, Reno, carson city, Nevada" />
     <link rel="canonical" href="https://asantiago-handyman.github.io/" />
+    <meta name="google-site-verification" content="yK0Zj0BjisdTRo0BKig-HQ4mk7-eIMgvU27473JJ9nQ" />
     <meta name="author" content="Alfredo Santiago">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <link rel="icon" type="image/png" href="favicon.png">
