Update: 2407062248 index.html

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
             <h2>About</h2>
             <p style="font-size:18px">
               Alfredo Santiago's Education:<br>
-              Certificate in HVAC/R - Truckee Meadows Community College (TMCC), May 2022<br>
-              Certificate in Commercial Refrigeration - TMCC, May 2022<br>
+              Certificate of Achievement, HVAC/R, May 2022<br> 
+              Truckee Meadows Community College, Reno, NV<br>
+              <br>
+              Certificate of Achievement, Commercial Refrigeration, May 2022<br> 
+              Truckee Meadows Community College, Reno, NV<br>
               <br>
               Experience:<br>
               06/2023 - 04/2024 | HVAC/R Technician, THE ARCTICOM GROUP<br>
